Fixed DE1371: Billboard is shifted

--- a/web/static/css/app.sass
+++ b/web/static/css/app.sass
@@ -329,19 +329,19 @@ body
     display: flex
     .facilitator-section
       flex: 1
-      display: inline-block
+      display: flex
+      max-width: 50%
       margin-bottom: 20px
       .say-section
+        flex: 1
         vertical-align: top
-        display: inline-block
         .outerbox
-          margin-left: -20px
+          display: flex
           .triangle
             margin-top: -10px
             vertical-align: top
             position: relative
             top: 2em
-            display: inline-block
             width: 0
             height: 0
             border-style: solid
@@ -351,10 +351,11 @@ body
             _border-color: #000000 $message-facilitator #000000 #000000
             _filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000')
           .innerbox
-            display: inline-block
+            flex: 1
             background-color: $message-facilitator
             min-height: 4em
             width: 15vw
+            margin-right: 5px
             p
               margin: 2px 5px
               font-size: 18px
@@ -389,6 +390,9 @@ body
       text-align: left
       padding-left: 8%
     .facilitator-section
+      display: block
+      max-width: 100%
+      margin-bottom: 10px
       > div.div-inline-block
         display: block
       svg
@@ -398,11 +402,12 @@ body
       svg text.svg-avatar-topic
         display: none
       .outerbox
-        margin-left: 20px !important
+        display: block !important
         left: 0
         position: inherit
         .triangle
-          margin-top: -40px !important
+          left: 30px
+          top: 2px !important
           border-width: 0 15px 15px 15px !important
           border-color: transparent transparent $message-facilitator transparent !important
           _border-color: #000000 #000000 $message-facilitator #000000 !important
@@ -476,9 +481,7 @@ body
 
 @media (max-width: 1200px)
   .outerbox
-    margin-left: -30px !important
     .innerbox
-      width: 18vw !important
       p
         font-size: 14px !important
 
